dnl $Id$
dnl
dnl Process this file with GNU autoconf(1) to produce a configure script.
dnl
AC_INIT(udunits)
UC_INIT

UC_ENSURE(PORT_MANIFEST, udalloc.c udalloc.h)dnl

UC_PREFIX(..)

UC_DEFAULT(CFLAGS, -O)
UC_DEFAULT(CPPFLAGS, )

UC_PROG_NEQN
UC_PROG_TBL
UC_PROG_AR

libdir=`pwd`/lib
UC_LINK_REF(LD_UDUNITS, $libdir, udunits)
AC_SUBST(LD_UDUNITS)
UC_LIB_YACC
UC_LIB_MATH

UC_CFORTRAN

UC_UDPOSIX_STDDEF
UC_UDPOSIX_FLOAT
UC_UDPOSIX_STDLIB
UC_UDPOSIX_STRING
UC_UDPOSIX_TIME
UC_UDPOSIX_LIMITS
UC_UDPOSIX_SEARCH

UL_PROG_PERL
UL_PERL_LINKTYPE
UL_PIC
UL_SUBDIR_PERL

UC_FTPDIR(pub/udunits)

UC_FINISH(
    Makefile
    lib/Makefile
    udunits/Makefile
    perl/Makefile.PL
)
